<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="ui.SearchFragment">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/AppBar"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:background="@color/colorPrimary"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        >
        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolBar"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/colorPrimary"
            android:theme="@style/AppTheme"
            app:popupTheme="@style/ThemeOverlay.AppCompat.Light"
            >
            <ImageView
                android:id="@+id/imgBack"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_back"
                android:layout_margin="10dp"
                />
            <TextView
                android:id="@+id/tvUsername"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/titleUsername"
                android:textSize="20sp"
                android:layout_margin="10dp"
                />
        </androidx.appcompat.widget.Toolbar>
    </com.google.android.material.appbar.AppBarLayout>


    <de.hdodenhof.circleimageview.CircleImageView
        android:id="@+id/imgProfile"
        android:layout_width="0dp"
        android:layout_height="80dp"
        app:layout_constraintWidth_min="100dp"
        android:src="@drawable/profile"
        app:layout_constraintTop_toBottomOf="@id/AppBar"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_margin="16dp"
        />

    <TextView
        android:id="@+id/tvPostNum"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="11"
        android:textColor="@color/colorBlack"
        app:layout_constraintTop_toTopOf="@id/imgProfile"
        app:layout_constraintBottom_toBottomOf="@id/imgProfile"
        app:layout_constraintLeft_toRightOf="@id/imgProfile"
        android:theme="@style/MyTextView"
        android:layout_marginStart="16dp"
        />
    <TextView
        android:id="@+id/tvPostText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/itemPost"
        app:layout_constraintTop_toBottomOf="@id/tvPostNum"
        app:layout_constraintLeft_toLeftOf="@id/tvPostNum"
        app:layout_constraintRight_toRightOf="@id/tvPostNum"
        />

    <TextView
        android:id="@+id/tvFollowersNum"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="334"
        android:textColor="@color/colorBlack"
        app:layout_constraintTop_toTopOf="@id/tvPostNum"
        app:layout_constraintBottom_toBottomOf="@id/tvPostNum"
        app:layout_constraintLeft_toLeftOf="@id/tvPostNum"
        app:layout_constraintRight_toRightOf="@id/tvFollowingNum"
        android:theme="@style/MyTextView"
        />
    <TextView
        android:id="@+id/tvFollowersText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/itemFollowers"
        app:layout_constraintTop_toBottomOf="@id/tvFollowersNum"
        app:layout_constraintLeft_toLeftOf="@id/tvFollowersNum"
        app:layout_constraintRight_toRightOf="@id/tvFollowersNum"
        />

    <TextView
        android:id="@+id/tvFollowingNum"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="334"
        android:textColor="@color/colorBlack"
        app:layout_constraintTop_toTopOf="@id/tvFollowersNum"
        app:layout_constraintBottom_toBottomOf="@id/tvFollowersNum"
        app:layout_constraintRight_toRightOf="parent"
        android:theme="@style/MyTextView"
        android:layout_marginEnd="25dp"
        />
    <TextView
        android:id="@+id/tvFollowingText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/itemFollowing"
        app:layout_constraintTop_toBottomOf="@id/tvFollowingNum"
        app:layout_constraintLeft_toLeftOf="@id/tvFollowingNum"
        app:layout_constraintRight_toRightOf="@id/tvFollowingNum"

        />

    <TextView
        android:id="@+id/tvFullName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/imgProfile"
        app:layout_constraintLeft_toLeftOf="parent"
        android:text="W I W I T"
        android:textStyle="bold"
        android:textSize="20sp"
        android:layout_marginTop="16dp"
        android:layout_marginStart="20dp"


        />
    <TextView
        android:id="@+id/tvBio"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/tvFullName"
        app:layout_constraintLeft_toLeftOf="parent"
        android:text="W I W I T"
        android:textSize="16sp"
        android:layout_marginTop="10dp"
        app:layout_constraintStart_toStartOf="@id/tvFullName"


        />

    <Button
        android:id="@+id/btnFavorite"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/tvBio"
        android:layout_margin="16dp"
        android:text="@string/add_favorite"
        android:drawableStart="@drawable/ic_favorite"
        android:gravity="center"
        android:drawableTint="@color/colorPrimary"
        />



    <androidx.cardview.widget.CardView
        android:layout_margin="5dp"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintTop_toBottomOf="@id/btnFavorite"
        app:cardCornerRadius="6dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        >
        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rvGallery"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            tools:listitem="@layout/item_image"

            />

    </androidx.cardview.widget.CardView>

    <ProgressBar
        android:id="@+id/pbLoading"
        android:layout_width="120dp"
        android:layout_height="120dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        style="@style/Widget.AppCompat.ProgressBar"
        android:visibility="visible"
        android:elevation="10dp"


        />


</androidx.constraintlayout.widget.ConstraintLayout>